# federated-learning-with-task-vector

./: README.md  pyproject.toml
federated-learning-with-task-vector/: README.md  pyproject.toml
federated-learning-with-task-vector/fl_app/: __init__.py  client_app.py  server_app.py  task.py
federated-learning-with-task-vector/task_vectors/: eval.py  finetune.py  heads.py  modeling.py
